--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@ session_start();
 		   	 	<div class="centered-subline desc white-text text-darken-4">― George R.R. Martin, A Dance with Dragons</div>
 		    </div>
 		</div>
-		
+		<div class="parallax-container">
+		    <div class="parallax">
+		   	 	<img src="images/parallax2.jpg" style="opacity: 0.8">
+		   	 	<div class="centered-title white-text text-darken-3">W & B</div>
+		   	 	<div class="centered-subline white-text text-darken-4">Easy, Fast, and Cheap</div>
+		    </div>
+		</div>
+		<div id ="aboutus" class="section yellow darken-2">
+		    <div class="row container">
+		        <h2 class="white-text header">W & B</h2>
+		        <p class="wbdesc grey-text text-lighten-4">W & B is an online helper for personal library purpose. W & B was made in 21 November 2016. We want a easy way where everybody can rent and buy books online without any hardtime.</p>
+		    </div>
+		</div>
+		<div class="parallax-container">
+		    <div class="parallax">
+		   	 	<img src="images/parallax3.jpg" style="opacity: 0.8">
+		   	 	<div class="centered-subline second white-text text-darken-4">“A reader lives a thousand lives before he dies. The man who never reads lives only one.” </div>
+		   	 	<div class="centered-subline desc white-text text-darken-4">― George R.R. Martin, A Dance with Dragons</div>
+		    </div>
+		</div>
 		<footer class="page-footer red darken-2">
           <div class="container">
             <div class="row">
