--- a/main.html
+++ b/main.html
@@ -303,7 +303,7 @@
 		    		</p>
 		    	</div>
 		    	<div class="col s12">
-		    		<center><a href="main2.php" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;">Next Page --></a></center>
+		    		<center><a href="main2.html" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;">Next Page --></a></center>
 		    	</div>
 		    </div>
 		</div>
