--- a/main2.html
+++ b/main2.html
@@ -303,8 +303,8 @@
 		    	<div class="col s12">
 		    		<center>
 		    		<br>
-		    				<a href="main.php" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;"><-- Prev Page </a>
-		    				<a href="main3.php" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;"> Next Page --></a>
+		    				<a href="main.html" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;"><-- Prev Page </a>
+		    				<a href="main3.html" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;"> Next Page --></a>
 		    		</center>
 		    	</div>
 		    </div>
