--- a/main3.html
+++ b/main3.html
@@ -254,7 +254,7 @@
 		    	<div class="col s12">
 		    			<center>
 
-		    				<a href="main2.php" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;"><-- Prev Page </a>
+		    				<a href="main2.html" class="jan-text wbdesc black-text text-darken-4" style="font-size: 50px;"><-- Prev Page </a>
 		    			</center>
 		    	</div>
 		    </div>
