--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 	</head>
 	<body class="pink lighten-4">   
         <img alt="full screen background image" src="src/images/IMG20151107160620.jpg" id="full-screen-background-image" />
-        <a href="main.php"><img class="heart centered" src="src/images/heart2.png"></a>
+        <a href="main.html"><img class="heart centered" src="src/images/heart2.png"></a>
     </body>
 </html>
