--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 
 <html>
 	<head>
-		<title>Wilda & Bagas</title>
+		<title>Adit & Lala</title>
 		<meta charset="UTF-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
